Fixed spacing on our process page

--- a/themes/FoundationPress/src/assets/scss/templates/_our_process.scss
+++ b/themes/FoundationPress/src/assets/scss/templates/_our_process.scss
@@ -53,7 +53,7 @@ iframe {
 	display: none;
 }
 
-@media only screen and (min-width: 1040px) {
+@media only screen and (min-width: $large) {
 
 
 iframe {
@@ -81,21 +81,19 @@ iframe {
 	overflow: hidden;
 	flex-wrap: wrap;
 	display: flex;
-	align-items: center;
+	// align-items: center;
 	justify-content: center;
 
 	.desktop-process-img{ 
 		width: 40%;
 		height: 180px;
-		margin-left: 2.5%;
-		margin-top: 5px;
-		margin-bottom: 5px;
+		margin-left: 1rem;
+		margin-bottom: 1rem;
 	 }
 
 	.desktop-process-img-last {
 		width: 82.5%;
 		margin-left: 2.5%;
-		margin-top: 5px;
 		margin-bottom: 20px;
 	}
 }
